# mcp-searxng

./: Dockerfile  README.md  mcp-searxng.py  pyproject.toml  searxng-mcp.service
src/mcp_searxng/: __init__.py  __main__.py  server.py
tests/: test_server.py
