[project]
name = "mcp-searxng"
version = "0.1.0"
description = "MCP server for web search and HTTP requests via SearxNG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=26.1.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "mcp>=1.27.1",
    "rich>=15.0.0",
    "uvicorn>=0.47.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
